# OS-labs

./: .gitignore
BufferedChannel/: BufferedChannel.h  main.cpp
Linux/Client/: CMakeLists.txt  main.cpp
Linux/Number/: CMakeLists.txt
Linux/Vector/: CMakeLists.txt  Vector.cpp  Vector.h
LinuxTerminal/linuxTerminal/: clientscript.sh
LinuxTerminal/linuxTerminal/Client/: main.cpp
MatrixLinux/: BlockMatrix.cpp  BlockMatrix.h
MatrixWindows/: BlockMatrix.cpp  BlockMatrix.h  Matrix.cpp  Matrix.h  matrix_win.cpp
MatrixWithChannel/: BlockMatrix.cpp  BlockMatrix.h  BufferedChannel.h  CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
WinProcess/Killer/: Killer.cpp
WinProcess/User/: User.cpp
Windows/Client/: Client.sln
Windows/Client/Client/: Client.cpp  Client.vcxproj
Windows/StaticLibrary/: StaticLibrary.sln
Windows/StaticLibrary/Number/: Number.cpp
Windows/Vector/: Vector.sln
Windows/Vector/Vector/: Vector.cpp  Vector.h
WindowsLab1/Client/Client/Debug/: vc143.idb
WindowsLab1/StaticLibrary/Debug/: Number.idb  Number.lib
WindowsLab1/StaticLibrary/Number/: Number.h  Number.vcxproj
WindowsLab1/Vector/Debug/: Vector.exp  Vector.lib
WindowsLab1/Vector/Vector/: Vector.vcxproj
linPipe/A/: main.cpp
linPipe/P/: main.cpp
linPipe/PipeLine/: main.cpp
linProcess/killer/: main.cpp
linProcess/user/: main.cpp
thread/Multithreading/: BlockMatrix.cpp  BlockMatrix.h  CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
winPipe/A/: A.cpp
winPipe/M/: M.cpp
winPipe/P/: P.cpp
winPipe/PipeLine/: PipeLine.cpp
winPipe/S/: S.cpp
(+53 files in other folders)
